# autoprompt

./: CLAUDE.md  README.md  pyproject.toml
logs/: trace.json
prompts/test/: bulletize.md  output.md  settings.yaml  trepanning_short_note.md
prompts/test/.deepeval/: .deepeval_telemetry.txt
prompts/test/logs/: trace.json
src/autoprompt/: __init__.py  __main__.py
src/autoprompt/commands/: base_command.py  test_command.py
src/autoprompt/completions/: completions_manager.py  prompt_data.py
src/autoprompt/console/: main.py  rich_logging_protocol.py
src/autoprompt/data/: __init__.py  model_settings.py
src/autoprompt/helpers/: completions_manager.py
src/autoprompt/metrics/alignment/: alignment.py  schema.py  template.py
src/autoprompt/metrics/coverage/: coverage.py  schema.py  template.py
src/autoprompt/protocols/: __init__.py
src/autoprompt/settings/: __init__.py  settings.py
src/autoprompt/utils/: __init__.py  common_paths.py
tests/unit/: test_cli.py
